Ajout du header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,68 @@
   <title>Formations!</title>
 </head>
 
-<body</body>
+<body>
+  <!-- header -->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-white fw-bold">
+      <div class="container">
+        <a class="navbar-brand" href="#" title="Sogo Simplon">
+          <img src="./formations/img/simplonSN.png" alt="Logo Simplon" width="150" class=" d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon sp-red"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item mx-3">
+              <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="#">Fabrique</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link " href="">Formations</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link " href="">Partenariat</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link " href="">Espaces</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link " href="">Entites</a>
+            </li>
+          </ul>
+          <form class="d-flex ">
+            <div class="nav-item mx-3 dropdown ">
+              <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                EN
+              </a>
+              <ul class="dropdown-menu mw-5" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="#">EN</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">FR</a>
+                </li>
+              </div>
+              <div class="d-flex align-items-center">
+
+                <a href="" class="sm px-3 py-2 sp-rounded-link  sp-btn-danger" >Contact</a>
+              </div>
+          </form>
+        </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+ 
+
+    <script src="./js/script.js"></script>
+    <!-- ============Local bootstrap JavaScript ressource file! ============= -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
+</body>
 
 </html>
