--- a/index.html
+++ b/index.html
@@ -67,8 +67,21 @@
       </div>
     </nav>
   </header>
- 
-
+  <div class="container-fluid">
+    <img src="./formations/img/formationsproBestResolution.jpg" alt="Banner" class="img-fluid">
+    <!-- barre de recherche -->
+    <div class="row justify-content-center my-4">
+      <div class="col-6">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control sp-input-shadow" placeholder="Rechercher une formation"
+            aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <span class="input-group-text bg-danger" id="basic-addon2"><i class="bi bi-search  bg-danger text-white"
+              aria-hidden="true"></i></span>
+        </div>
+      </div>
+    </div>
+  
+  </div>
     <script src="./js/script.js"></script>
     <!-- ============Local bootstrap JavaScript ressource file! ============= -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
