Ajout de la section par parcours

--- a/index.html
+++ b/index.html
@@ -80,7 +80,127 @@
         </div>
       </div>
     </div>
-  
+      <!-- Section parcours -->
+      <div class="row">
+        <!-- Parcours title -->
+        <div class="col-12">
+          <div class="  col-3 col-sm-4">
+            <h2 class="sp-red mb-0">Par Parcours </h2>
+            <hr class="sp-line bg-danger w-25  mt-0">
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <!-- menu -->
+          <div class="col-2 offset-1 ">
+            <div class="left-bloc d-flex align-items-center">
+              <div class="vertical-bar">
+              </div>
+              <div class="menu ">
+                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                  <span class="d-flex align-items-center">
+                    <object type="image/svg+xml" data="./formations/img/SVG/IconFemmeBlanc.svg" title="icon"></object>
+                  </span>
+                  Femme
+                </p>
+                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                  <span class="d-flex align-items-center">
+                    <object type="image/svg+xml" data="./formations/img/SVG/IconKidsblanc.svg" title="icon"></object>
+                  </span>
+                  Kids
+                </p>
+                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                  <span class="d-flex align-items-center">
+                    <object type="image/svg+xml" data="./formations/img/SVG/IconPshblanc.svg" title="icon"></object>
+                  </span>
+                  PSH
+                </p>
+                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                  <span class="d-flex align-items-center">
+                    <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg" title="icon"></object>
+                  </span>
+                  Refugies
+                </p>
+              </div>
+    
+            </div>
+          </div>
+          <!-- card formation -->
+          <div class="col ">
+            <div class=" row mx-2 row-cols-3">
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center rounded-top rounded-3">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col my-3  justify-content-center">
+                <div class="card shadow text-center">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                  </div>
+                </div>
+              </div>
+              <div class=" col-12 text-end alert">
+                <a href="" class="text-decoration-underline alert-link">Afficher tout</a>
+              </div>
+            </div>
+          </div>
+    
+        </div>
+      </div>
   </div>
     <script src="./js/script.js"></script>
     <!-- ============Local bootstrap JavaScript ressource file! ============= -->
