Ajout section par parcour et amelioration responsivite

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <!-- header -->
   <header>
-    <nav class="navbar navbar-expand-lg bg-white fw-bold">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold">
       <div class="container">
         <a class="navbar-brand" href="#" title="Sogo Simplon">
           <img src="./formations/img/simplonSN.png" alt="Logo Simplon" width="150" class=" d-inline-block align-text-top">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon sp-red"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
@@ -47,18 +47,17 @@
           <form class="d-flex ">
             <div class="nav-item mx-3 dropdown ">
               <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                EN
+                En
               </a>
               <ul class="dropdown-menu mw-5" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="#">EN</a>
+                  <a class="dropdown-item" href="#">En</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">FR</a>
+                  <a class="dropdown-item" href="#">Fr</a>
                 </li>
               </div>
-              <div class="d-flex align-items-center">
-
+              <div class="d-flex align-items-center ">
                 <a href="" class="sm px-3 py-2 sp-rounded-link  sp-btn-danger" >Contact</a>
               </div>
           </form>
@@ -72,49 +71,64 @@
     <!-- barre de recherche -->
     <div class="row justify-content-center my-4">
       <div class="col-6">
-        <div class="input-group mb-3">
+        <div class="input-group my-3">
           <input type="text" class="form-control sp-input-shadow" placeholder="Rechercher une formation"
             aria-label="Recipient's username" aria-describedby="basic-addon2">
-          <span class="input-group-text bg-danger" id="basic-addon2"><i class="bi bi-search  bg-danger text-white"
+          <span class="input-group-text sp-btn-danger" id="basic-addon2"><i class="bi bi-search   text-white"
               aria-hidden="true"></i></span>
         </div>
       </div>
     </div>
       <!-- Section parcours -->
-      <div class="row">
+      <div class="row justify-content-center">
         <!-- Parcours title -->
         <div class="col-12">
-          <div class="  col-3 col-sm-4">
-            <h2 class="sp-red mb-0">Par Parcours </h2>
-            <hr class="sp-line bg-danger w-25  mt-0">
+          <div class="  offset-1">
+            <h2 class="sp-red sp-line-under mb-2">Par Parcours </h2>
           </div>
+        </div>
+        <div class="col-10 sp-text-md offset-1">
+          <p class="my-3">
+            Physical space is often conceived in three linear dimensions, although modern physicists usually 
+            consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime. 
+            The concept of space is considered to be of fundamental importance to an understanding of the 
+            physical Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nostrum optio id iusto 
+            doloribus suscipit similique incidunt minima molestiae alias tempora beatae. Eaque, ducimus maiores? 
+            Corporis nostrum fugit alias eum exercitationem tempore ab sapiente temporibus modi quae tempora
+            laudantium deserunt asperiores aliquid ratione dolorum placeat omnis hic enim aperiam ducimus, 
+            labore aliquam. Vitae, adipisci ea accusamus esse molestias quae tenetur asperiores aspernatur
+            laborum aperiam molestiae vero quod praesentium fuga dolore deserunt facere libero. Sunt earum debitis 
+            corporis nihil magni, maiores quasi natus! Deleniti cum perferendis placeat vel corporis dolor quod 
+            reiciendis ad ullam? Minus architecto officia animi quod quo sit.
+          </p>
+
         </div>
         <div class="row align-items-center">
           <!-- menu -->
-          <div class="col-2 offset-1 ">
-            <div class="left-bloc d-flex align-items-center">
+          <div class="col-md-2 col-sm-12 offset-md-1 px-sm-0 text-center  ">
+            <div class="left-bloc d-flex align-items-center  align-items-sm-start  ">
               <div class="vertical-bar">
               </div>
               <div class="menu ">
-                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
                   <span class="d-flex align-items-center">
                     <object type="image/svg+xml" data="./formations/img/SVG/IconFemmeBlanc.svg" title="icon"></object>
                   </span>
                   Femme
                 </p>
-                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
                   <span class="d-flex align-items-center">
                     <object type="image/svg+xml" data="./formations/img/SVG/IconKidsblanc.svg" title="icon"></object>
                   </span>
                   Kids
                 </p>
-                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
                   <span class="d-flex align-items-center">
                     <object type="image/svg+xml" data="./formations/img/SVG/IconPshblanc.svg" title="icon"></object>
                   </span>
                   PSH
                 </p>
-                <p class="my-5 p-1 pe-3 shadow-sm rounded-end d-flex align-items-center">
+                <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
                   <span class="d-flex align-items-center">
                     <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg" title="icon"></object>
                   </span>
@@ -125,83 +139,84 @@
             </div>
           </div>
           <!-- card formation -->
-          <div class="col ">
-            <div class=" row mx-2 row-cols-3">
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center rounded-top rounded-3">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+          <div class="col-md  col-sm-12">
+            <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">Infographie</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/qualite.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">Qualite web</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/leadership.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">LeaderShip</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">Infographie</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">Infographie</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class="col my-3  justify-content-center">
-                <div class="card shadow text-center">
-                  <img src="./formations/img/OIP.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title center text-uppercase fw-light  sp-red">Infographie</h5>
+              <div class="col my-3 mw-50  justify-content-center ">
+                <div class="card shadow text-center sp-rounded-top-15">
+                  <img src="./formations/img/OIP.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                  <div class="card-body ">
+                    <h5 class="card-title center text-uppercase fw-light sp-red sp-text-sm">Infographie</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
-                    <a href="#" class="btn btn-sm btn-danger px-3 sp-text-sm rounded-pill sp-bg-red">En savoir plus</a>
+                    <a href="#" class=" px-3 py-2 sp-rounded-link  sp-btn-danger">En savoir plus</a>
                   </div>
                 </div>
               </div>
-              <div class=" col-12 text-end alert">
-                <a href="" class="text-decoration-underline alert-link">Afficher tout</a>
-              </div>
+            </div>
+            <div class=" col-12 text-end alert">
+              <a href="" class="text-decoration-underline alert-link">Afficher tout</a>
             </div>
           </div>
     
         </div>
       </div>
   </div>
+  
     <script src="./js/script.js"></script>
     <!-- ============Local bootstrap JavaScript ressource file! ============= -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
