--- a/index.html
+++ b/index.html
@@ -213,6 +213,132 @@
           </div>
         </div>
       </div>
+    </div>
+      <!-- Section parcours -->
+    <div class="row justify-content-center">
+      <!-- Parcours title -->
+      <div class="col-12">
+        <div class="col-10 offset-1">
+          <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">Par Parcours </h2>
+          <p class="my-3">
+            Physical space is often conceived in three linear dimensions, although modern physicists usually 
+            consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime. 
+            The concept of space is considered to be of fundamental importance to an understanding of the 
+            physical Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nostrum optio id iusto 
+            doloribus suscipit similique incidunt minima molestiae alias tempora beatae. Eaque, ducimus maiores? 
+            Corporis nostrum fugit alias eum exercitationem tempore ab sapiente temporibus modi quae tempora
+            laudantium deserunt asperiores aliquid ratione dolorum placeat omnis hic enim aperiam ducimus, 
+            labore aliquam. Vitae, adipisci ea accusamus esse molestias quae tenetur asperiores aspernatur
+            laborum aperiam molestiae vero quod praesentium fuga dolore deserunt facere libero. Sunt earum debitis 
+            corporis nihil magni, maiores quasi natus! Deleniti cum perferendis placeat vel corporis dolor quod 
+            reiciendis ad ullam? Minus architecto officia animi quod quo sit.
+          </p>
+          <div class="row align-items-center">
+            <!-- menu -->
+            <div class="col-md-2 col-sm-12 px-sm-0 text-center  ">
+              <div class="left-bloc d-flex align-items-center  align-items-sm-start  ">
+                <div class="vertical-bar">
+                </div>
+                <div class="menu ">
+                  <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
+                    <span class="d-flex align-items-center">
+                      <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg" title="icon"></object>
+                    </span>
+                    Decouverte
+                  </p>
+                  <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
+                    <span class="d-flex align-items-center">
+                      <object type="image/svg+xml" data="./formations/img/SVG/father-svgrepo-com.svg" title="icon"></object>
+                    </span>
+                    Initiation
+                  </p>
+                  <p class="my-5 p-1 pe-md-3 p-sm-1 shadow-sm rounded-end d-flex align-items-center">
+                    <span class="d-flex align-items-center">
+                      <object type="image/svg+xml" data="./formations/img/SVG/IconOrienteMetierBlanc.svg" title="icon"></object>
+                    </span>
+                    Metier
+                  </p>
+                </div>
+      
+              </div>
+            </div>
+            <!-- card formation -->
+            <div class="col-md  col-sm-12">
+              <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/leadership.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">LeaderShip</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                      <a href="#" class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/communication.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Comminication</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                      <a href="#" class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/technologie.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Infographie</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                        <a href="#" class="d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link sp-btn-danger">En savoir plus</a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing </h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                      <a href="#" class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/teamWorking.png" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Travail en equipe</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                      <a href="#" class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col my-3 mw-50  justify-content-center ">
+                  <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                    <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15" alt="...">
+                    <div class="card-body sp-rounded-bottom-15">
+                      <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Referencement web</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                      <a href="#" class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class=" col-12 text-end alert">
+                <a href="" class="text-decoration-underline alert-link">Afficher tout</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>          
   </div>
   <!-- Section footer -->
