Ajout du titre dans le banner

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         </nav>
     </header>
     <main class="container-fluid ">
-        <img src="./formations/img/formationsproBestResolution.jpg" alt="Banner" class="img-fluid ">
+        <div class="banner">
+            <img src="./formations/img/formationsproBestResolution.jpg" alt="Banner" class="img-fluid">
+
+        </div>
         <!-- barre de recherche -->
         <div class="row justify-content-center my-4">
             <div class="col-sm-8 col-md-6">
@@ -94,7 +97,7 @@
             <div class="col-12">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">Par Public </h2>
-                    <p class="my-3">
+                    <p class="my-5">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
@@ -296,7 +299,7 @@
             <div class="col-12 px-0">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">Par Parcours </h2>
-                    <p class="my-3">
+                    <p class="my-5">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
@@ -483,7 +486,7 @@
             <div class="col-12 px-0 me-0">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">En Partenariat </h2>
-                    <p class="my-3">
+                    <p class="my-5">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
